we do a little updating

--- a/res/templates/index.html
+++ b/res/templates/index.html
@@ -5,19 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <main>
+        <aside> 
             <div id="welcome">
-                <div>Welcome.</div>
-                <div>
-                    <img src="res/images/picture.jpeg">
+                <div>you wouldn't leave me here to starve, would you?</div>
+                <div id="profile-image">
+                    <img src="res/images/profile.webp">
                 </div>
-                <span>I write software! - Who I am does not matter.</span>
+                <span>trying to make a living off soulless content</span>
             </div>
 
+        </aside>
+        <main>
             <div id="socials">
                 {{#social}}
-                <a target="_blank" class="social" href="{{url}}">
-                    <img src="{{icon_url}}">
+                <a class="social-row" target="_blank" href="{{url}}">
+                    <div class="social-icon"><img src="{{icon_url}}"></div>
+                    <span class="social-text">{{page}} - {{site}}</span>
                 </a>
                 {{/social}}
             </div>
