--- a/res/styles/style.css
+++ b/res/styles/style.css
@@ -34,36 +34,58 @@ main {
 
 #socials {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.social {
+.social-row {
+    background-color: #161616;
+    padding: 1rem;
+    border-radius: 16px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: row;
+    min-width: 20rem;
+    cursor: pointer;
+}
+
+.social-row:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    background-color: #242424;
+}
+
+.social-icon {
     max-width: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.social:hover {
-    img {
-        transform: scale(150%);
-    }
-
-    cursor: pointer;
+.social-icon img {
+    width: 100%;
 }
 
-.social img {
-    max-width: 100%;
-    max-height: 100%;
+.social-text {
+    flex: 1;
 }
 
 #welcome {
     display: flex;
     flex-direction: column;
+}
 
-    img {
-        max-height: 16rem;
-    }
+#profile-image {
+    max-height: 15rem;
+    max-width: 15rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
